=== 2012-10-21

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 286
  * Upgraded Ruby 1.8.7 to patchlevel 371
  * Retire build support for mingw-32-4.5.2 DevKit
  * Add MinGW-w64 v2.0.7 header/CRT update to mingw64-{34,64}-4.7.2
  * Add tdm-32-4.7.1 and tdm-64-4.7.1 support
  * Changed mingw64-32-4.7.2 to use i686-w64-mingw32-gcc-4.7.2-release-win32_rubenvb
  * Add 64bits GCC 4.7.2 from mingw-w64 project (rubenvb builds)
  * Added mingwbuilds-32-4.7.2 support
  * Convert gdbm recipe to use Knapsack binaries
  * Convert pdcurses recipe to use Knapsack binaries
  * Convert tcl and tk recipes to use Knapsack binaries

* Bugfixes:
  * Decreased file descriptors for 1.9.x to 2K. Closes #104 (again)
    Ruby associates a file descriptor to a socket, so can't use more than
    2048 FDs

* Internal:
  * Upgraded mingwrt for tdm-32-4.6.1 and mingw-32-4.6.2
  * Upgraded specific DevKit's to GDB version 7.5
  * Correct typo in rdoc_chm installation message.
  * Allow cleanup before make to satisfy CI environment.
    Usage:

    rake ruby19 CLEAN=1

=== 2012-06-29

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 370
  * Add support for Japanese language installers.
  * Enhance Inno scripts to enable multi-language installers.
  * Upgraded documentation generator dependency (rdoc_chm) to 3.1.0. Closes #63
  * Add mingw64-32-4.7.1 support (mingwbuilds 4.7.1 release)
  * Correct mingw64 4.6.3 to latest stable release
  * Upgraded RubyGems to 1.8.24 on all versions of Ruby
  * Upgraded OpenSSL to version 1.0.0j
  * Upgraded libffi to version 3.0.11
  * Upgraded ZLib to version 1.2.7
  * Upgraded Iconv to version 1.14
  * Disable extra debug information from Ruby 1.9 builds (debugflags)

=== 2012-04-21

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 194
  * Upgraded DevKit gdb to version 7.4 (no Python support)
  * Upgraded RubyGems to 1.8.23 on all versions of Ruby
  * Increased file descriptions for 1.9.x to 32K. Closes #104