@@ -1,3 +1,8 @@
+=== (in git)
+
+* Enhancements:
+  * Retire build support for mingw64-32-4.6.3 DevKit
+
 === 2012-10-21
 
 * Enhancements:
